# symbol-search.kak

./: .gitignore  Cargo.toml  build.rs  build.sublime-workspace  default-config.toml  default.nix  err.txt  example-config.toml  flake.nix  langs.toml  readme.md  rustfmt.toml  test.tsx
rc/: symbol-search.kak
src/: cache.rs  config.rs  ext.rs  fd.rs  fzf.rs  main.rs  parser.rs  rg.rs  symbol.rs  text.rs  utils.rs  worker.rs
src/parser/: scope.rs
syntax/include/: agda.sublime-syntax  c.sublime-syntax  go.sublime-syntax  haskell.sublime-syntax  python.sublime-syntax  rust.sublime-syntax  typescript.sublime-syntax
syntaxes/: TypeScript.sublime-syntax  TypeScriptReact.sublime-syntax
test/c/: run.c
test/jsx/: test.jsx
test/odin/: main.odin
