[package]
name = "kak-symbol-search"
description = "kakoune symbol search"
readme = "readme.md"
version = "0.2.1"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/enricozb/symbol-search.kak"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam = "0.8.4"
extend = "1.2.0"
parking_lot = "0.12.3"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.13"
