[package]
name = "kak-symbol-search"
description = "kakoune symbol search"
readme = "readme.md"
version = "0.4.4"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/enricozb/symbol-search.kak"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam = "0.8.4"
extend = "1.2.0"
once_cell = "1.19.0"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.125"
syntect = "5.2.0"
toml = "0.8.13"

[build-dependencies]
syntect = "5.2.0"
