[package]
name = "kak-symbol-search"
description = "kakoune symbol search"
readme = "readme.md"
version = "0.5.2"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/enricozb/symbol-search.kak"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam = "0.8.4"
extend = "1.2.0"
once_cell = "1.19.0"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.125"
streaming-iterator = "0.1.9"
toml = "0.8.13"
tree-sitter = "0.24"
tree-sitter-c = "0.23"
tree-sitter-go = "0.23"
tree-sitter-odin= "1.3.0"
tree-sitter-haskell = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-cpp = "0.23.4"
